@@ -12,6 +12,9 @@ import net.ripe.db.whois.common.rpsl.RpslAttribute;
 import net.ripe.db.whois.common.rpsl.RpslObject;
 import net.ripe.db.whois.common.source.Source;
 import net.ripe.db.whois.common.source.SourceContext;
+import net.ripe.db.whois.common.sso.AuthServiceClientException;
+import net.ripe.db.whois.common.sso.SsoTokenTranslator;
+import net.ripe.db.whois.common.sso.UserSession;
 import net.ripe.db.whois.query.acl.AccessControlListManager;
 import org.apache.commons.lang3.StringUtils;
 import org.elasticsearch.ElasticsearchStatusException;
@@ -29,6 +32,7 @@ import org.elasticsearch.search.fetch.subphase.highlight.HighlightBuilder;
 import org.elasticsearch.search.fetch.subphase.highlight.HighlightField;
 import org.elasticsearch.search.sort.SortBuilder;
 import org.elasticsearch.search.sort.SortBuilders;
+import org.elasticsearch.search.sort.SortOrder;
 import org.slf4j.Logger;
 import org.slf4j.LoggerFactory;
 import org.springframework.beans.factory.annotation.Autowired;
@@ -37,7 +41,6 @@ import org.springframework.stereotype.Component;
 
 import javax.annotation.Nullable;
 import java.io.IOException;
-import java.util.Arrays;
 import java.util.Collections;
 import java.util.List;
 import java.util.Map;
@@ -56,9 +59,20 @@ public class ElasticFulltextSearch extends FulltextSearch {
 
     private static final Logger LOGGER = LoggerFactory.getLogger(ElasticFulltextSearch.class);
 
-    public static final TermsAggregationBuilder AGGREGATION_BUILDER = AggregationBuilders.terms("types-count").field("object-type.raw");
-    public static final List<SortBuilder<?>> SORT_BUILDERS = Arrays.asList(SortBuilders.scoreSort(), SortBuilders.fieldSort("lookup-key.raw").unmappedType("keyword"));
+    public static final TermsAggregationBuilder AGGREGATION_BUILDER = AggregationBuilders
+            .terms("types-count")
+            .field("object-type.raw")
+            .size(ObjectType.values().length);
+
+    public static final List<SortBuilder<?>> SORT_BUILDERS = List.of(
+            SortBuilders.fieldSort("lookup-key.raw")
+                    .unmappedType("keyword")
+                    .order(SortOrder.ASC)
+    );
+
     private final AccessControlListManager accessControlListManager;
+    private final SsoTokenTranslator ssoTokenTranslator;
+
     private final ElasticIndexService elasticIndexService;
 
     private final Source source;
@@ -72,6 +86,7 @@ public class ElasticFulltextSearch extends FulltextSearch {
     @Autowired
     public ElasticFulltextSearch(final ElasticIndexService elasticIndexService,
                                  final AccessControlListManager accessControlListManager,
+                                 final SsoTokenTranslator ssoTokenTranslator,
                                  final SourceContext sourceContext,
                                  final ApplicationVersion applicationVersion,
                                  @Value("${fulltext.search.max.results:10000}") final int maxResultSize) {
@@ -81,10 +96,11 @@ public class ElasticFulltextSearch extends FulltextSearch {
         this.source = sourceContext.getCurrentSource();
         this.maxResultSize = maxResultSize;
         this.elasticIndexService = elasticIndexService;
+        this.ssoTokenTranslator = ssoTokenTranslator;
     }
 
     @Override
-    public SearchResponse performSearch(final SearchRequest searchRequest, final String remoteAddr) throws IOException {
+    public SearchResponse performSearch(final SearchRequest searchRequest, final String ssoToken, final String remoteAddr) throws IOException {
         final Stopwatch stopwatch = Stopwatch.createStarted();
 
         if (searchRequest.getRows() > maxResultSize) {
@@ -95,7 +111,9 @@ public class ElasticFulltextSearch extends FulltextSearch {
             throw new IllegalArgumentException("Exceeded maximum " + MAX_ROW_LIMIT_SIZE + " documents");
         }
 
-        return new ElasticSearchAccountingCallback<SearchResponse>(accessControlListManager, remoteAddr, source) {
+        final UserSession userSession = ssoTokenTranslator.translateSsoTokenOrNull(ssoToken);
+
+        return new ElasticSearchAccountingCallback<SearchResponse>(accessControlListManager, remoteAddr, userSession, source) {
 
             @Override
             protected SearchResponse doSearch() throws IOException {
@@ -241,7 +259,7 @@ public class ElasticFulltextSearch extends FulltextSearch {
         final List<SearchResponse.Arr> documentArrs = Lists.newArrayList();
 
         hit.getHighlightFields().values().stream().collect(getHighlightsCollector()).forEach((attribute, highlightField) -> {
-            if("lookup-key".equals(attribute)){
+            if("lookup-key".equals(attribute) || attribute.contains("lowercase")){
                 return;
             }
 
